# ncclprobe

./: .gitignore  CMakeLists.txt  allreduce.cu  analyzer.py  clear_shm.py  comm.cu  comm.hpp  config.hpp  event_handler.cpp  event_handler.hpp  global_status.cpp  global_status.cu  global_status.hpp  nccl_structs.hpp  ncclprobe.cpp  ncclprobe.cu  run_test.sh  setup.py  shm_storage.cpp  shm_storage.hpp  shm_topo.cpp  shm_topo.hpp  slow_detection.py  test.cu  utils.hpp
control_plane/: cost_estimator.py  dp_planner.py  global_analyzer.py  global_controller.py  global_topo.py  local_analyzer.py  local_controller.py  mitigation_plan.py  slow_detection.py  task_split.py
injection/: 8node.pkl  adjust_pp.py  comm_worker.py  dp_planner.py  injection.py  slow_comm.py  slow_comp.py
